--- a/app/src/main/res/layout/fragment_homefragment.xml
+++ b/app/src/main/res/layout/fragment_homefragment.xml
@@ -9,7 +9,7 @@
     <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homefragment"
+    tools:context="homefragment.homefragment"
     android:padding="20dp">
 
 
