--- a/app/src/main/res/layout/fragment_homefragment3.xml
+++ b/app/src/main/res/layout/fragment_homefragment3.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homefragment3">
+    tools:context="homefragment.homefragment3">
 
 
     <TextView
